crates/php-parser/tests/snapshots/corpus__stmt_function_defaultvalues.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "a",
          "params": [
            {
              "name": "b",
              "type_hint": null,
              "default": {
                "kind": "Null",
                "span": {
                  "start": 28,
                  "end": 32
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 23,
                "end": 32
              }
            },
            {
              "name": "c",
              "type_hint": null,
              "default": {
                "kind": {
                  "String": "foo"
                },
                "span": {
                  "start": 43,
                  "end": 48
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 38,
                "end": 48
              }
            },
            {
              "name": "d",
              "type_hint": null,
              "default": {
                "kind": {
                  "ClassConstAccess": {
                    "class": {
                      "kind": {
                        "Identifier": "A"
                      },
                      "span": {
                        "start": 59,
                        "end": 60
                      }
                    },
                    "member": "B"
                  }
                },
                "span": {
                  "start": 59,
                  "end": 63
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 54,
                "end": 63
              }
            },
            {
              "name": "f",
              "type_hint": null,
              "default": {
                "kind": {
                  "UnaryPrefix": {
                    "op": "Plus",
                    "operand": {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 75,
                        "end": 76
                      }
                    }
                  }
                },
                "span": {
                  "start": 74,
                  "end": 76
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 69,
                "end": 76
              }
            },
            {
              "name": "g",
              "type_hint": null,
              "default": {
                "kind": {
                  "UnaryPrefix": {
                    "op": "Negate",
                    "operand": {
                      "kind": {
                        "Float": 1.0
                      },
                      "span": {
                        "start": 88,
                        "end": 91
                      }
                    }
                  }
                },
                "span": {
                  "start": 87,
                  "end": 91
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 82,
                "end": 91
              }
            },
            {
              "name": "h",
              "type_hint": null,
              "default": {
                "kind": {
                  "Array": []
                },
                "span": {
                  "start": 102,
                  "end": 109
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 97,
                "end": 109
              }
            },
            {
              "name": "i",
              "type_hint": null,
              "default": {
                "kind": {
                  "Array": []
                },
                "span": {
                  "start": 120,
                  "end": 122
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 115,
                "end": 122
              }
            },
            {
              "name": "j",
              "type_hint": null,
              "default": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "String": "foo"
                        },
                        "span": {
                          "start": 134,
                          "end": 139
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 134,
                        "end": 139
                      }
                    }
                  ]
                },
                "span": {
                  "start": 133,
                  "end": 140
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 128,
                "end": 140
              }
            },
            {
              "name": "k",
              "type_hint": null,
              "default": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "String": "foo"
                        },
                        "span": {
                          "start": 152,
                          "end": 157
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 152,
                        "end": 157
                      }
                    },
                    {
                      "key": {
                        "kind": {
                          "String": "bar"
                        },
                        "span": {
                          "start": 159,
                          "end": 164
                        }
                      },
                      "value": {
                        "kind": {
                          "String": "baz"
                        },
                        "span": {
                          "start": 168,
                          "end": 173
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 159,
                        "end": 173
                      }
                    }
                  ]
                },
                "span": {
                  "start": 151,
                  "end": 174
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 146,
                "end": 174
              }
            }
          ],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 179
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 179
  }
}
