crates/php-parser/tests/snapshots/corpus__stmt_function_nullfalsetruetypes_1.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "f_null",
          "params": [],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "null"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 26,
                  "end": 30
                }
              }
            },
            "span": {
              "start": 26,
              "end": 30
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 33
      }
    },
    {
      "kind": {
        "Function": {
          "name": "f_false",
          "params": [],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "false"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 54,
                  "end": 59
                }
              }
            },
            "span": {
              "start": 54,
              "end": 59
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 34,
        "end": 62
      }
    },
    {
      "kind": {
        "Function": {
          "name": "f_true",
          "params": [],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "true"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 82,
                  "end": 86
                }
              }
            },
            "span": {
              "start": 82,
              "end": 86
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 63,
        "end": 89
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 89
  }
}
